# safedictate-rust

./: .gitignore  Cargo.toml  README.md  build.bat  build.rs
src/: app.rs  audio.rs  audio_pipeline.rs  config.rs  diagnostics.rs  hotkey.rs  icon.rs  keystroke.rs  main.rs  recorder.rs  theme.rs  whisper.rs
